mysql-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec:
  containers:
  - name: demo
    image: mysql
    command: ["sleep", "3600"]
