pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod1
spec: 
   containers:
       - name: nginx-chaya
         image: nginx
         ports:
            - containerPort: 8080
