pod2.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod2
spec: 
   containers:
       - name: nginx-chaya
         image: nginx:1.21
         ports:
            - containerPort: 8080
            
       - name: watcher-chaya
         image: afakharany/watcher
