pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels: 
     app: helloworld
     env: dev
spec:
   containers:
     - name: k8s-demo
       image: arjunachari12/k8s-demo
       ports: 
          - name: nodejs-port
            containerPort: 3000
