pod4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod4
  labels: 
     app: java
     env: dev
spec:
   containers:
     - name: java-demo
       image: chaya2829/java-docker
       ports: 
          - name: java-port
            containerPort: 4000
