pod5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: helloworld-deployment-test
spec:
    replicas: 10
    selector: 
        matchLabels: 
           app: helloworld
    template:
        metadata:
          labels: 
            app: helloworld
        spec:
           containers:
              - name: k8s-demo
                image: arjunachari12/k8s-demo
                ports:
                  - name: nodejs-port
                    containerPort: 3000
