pod3-service.yaml
apiVersion: v1
kind: Service
metadata: 
   name: helloworld-service
spec:
   ports:
     - port: 31001
       nodeport: 31002
       targetPort: nodejs-port
       protocol: TCP
   selector:
      app: helloworld
      
   type: NodePort
