pod4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  ports:
  - port: 40001
    nodePort: 40002
    targetPort: java-port
    protocol: TCP
  selector:
    app: java
  type: NodePort
